--- a/examples/bazel_hermetic_toolchains_and_libs/py_example/BUILD
+++ b/examples/bazel_hermetic_toolchains_and_libs/py_example/BUILD
@@ -1,7 +1,9 @@
+load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
+
 py_binary(
     name = "example",
     srcs = ["example.py"],
-    deps = [":lib"], # The `:` from `:lib` equals to `//py_example:` in this case.
+    deps = [":lib"],  # The `:` from `:lib` equals to `//py_example:` in this case.
 )
 
 py_library(
@@ -12,5 +14,8 @@ py_library(
 py_test(
     name = "test",
     srcs = ["test.py"],
-    deps = [":example"], # It implicitly depends on `:lib` as well.
+    deps = [
+        ":example",  # It implicitly depends on `:lib` as well.
+        "@our_pip_hub//pytest:pkg",  # Comment this line out and run the test again.
+    ],
 )
