--- a/examples/0_bazel_basics_part_2/MODULE.bazel
+++ b/examples/0_bazel_basics_part_2/MODULE.bazel
@@ -4,6 +4,6 @@
 # https://bazel.build/rules/lib/globals/module
 
 module(
-    name = "bazel_workspace_commands_targets",
+    name = "bazel_basics_part_2",
     version = "0.0.1",
 )
