--- a/bazel_basics/1_workspace_commands_and_targets/MODULE.bazel
+++ b/bazel_basics/1_workspace_commands_and_targets/MODULE.bazel
@@ -4,6 +4,6 @@
 # https://bazel.build/rules/lib/globals/module
 
 module(
-    name = "bazel_basics_part_2",
+    name = "1_workspace_commands_and_targets",
     version = "0.0.1",
 )
